# OCRonQt

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
ScreenCaptureClass/: ScreenCapture.cpp  ScreenCapture.h
